<resources>
    <string name="app_name">Emt\'nt</string>
    <string name="title_activity_nav_">Nav_Activity</string>
    <string name="title_home">Search</string>
    <string name="title_dashboard">Favorites</string>
    <string name="title_notifications">Map</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favourite_change_name">Your name of the stop</string>

    <!-- LogIn Section -->
    <string name="login_email_hint">Username / Email</string>
    <string name="login_password_hint">Password</string>
    <string name="login_login_button">Login</string>
    <string name="login_signup_button">Create an account</string>
    <string name="login_email_layout_required">* Required</string>
    <string name="login_password_layout_required">* Required at least 6 characters</string>
    <string name="login_password_error">"Password" field is required to fill up</string>
    <string name="login_email_error">"Email" field is required to fill up</string>
    <string name="login_logInSuccessful">Welcome!</string>
    <!-- SignUp Section -->
    <string name="signup_signup_button">Sign Up</string>
    <string name="signup_back_button">Back</string>
    <string name="signup_name_hint">Name</string>
    <string name="signup_email_hint">Username / Email</string>
    <string name="signup_password_hint">Password</string>
    <string name="signup_email_layout_required">* Required</string>
    <string name="signup_password_layout_required">* Required at least 6 characters</string>
    <string name="signup_password_error">"Password" field is required to fill up</string>
    <string name="signup_email_error">"Email" field is required to fill up</string>
    <string name="signup_name_error">"Name" field is required to fill up</string>
    <string name="signup_userCreated_text">User created!</string>

    <!-- Search Section -->
    <string name="search_busStop_default_name">Default Stop Name</string>
    <string name="search_busStop_default_id">N. 1234</string>
    <string name="search_busStop_default_lines">12, 13, 14</string>
    <string name="search_busStop_image_contentDescription">Bus Stop</string>
    <string name="search_busStop_query_hint">Bus Stop\'s Number</string>

    <!-- Favourites Section -->
    <string name="favourite_busStop_default_name">Default Stop Name</string>
    <string name="favourite_busStop_default_id">N. 1234</string>
    <string name="favourite_busStop_default_lines">12, 13, 14</string>
    <string name="favourite_busStop_image_contentDescription">Bus Stop</string>
    <string name="favourite_busStop_realName_hint">Real Name:</string>
    <string name="favourite_busStop_realName_default">Some Real Name</string>
    <string name="favourite_alert_favouriteAdded">Added Bus Stop to Favourites</string>
    <string name="favourite_alert_favouriteDeleted">Deleted Bus Stop from Favourites</string>

    <!-- Notifications -->
    <string name="lines">Lines:</string>
    <string name="timeButton">Time</string>
    <string name="Monday">M</string>
    <string name="Tuesday">T</string>
    <string name="Wednesday">W</string>
    <string name="Thursday">T</string>
    <string name="Friday">F</string>
    <string name="Saturday">S</string>
    <string name="Sunday">S</string>
    <string name="addNotificationButton">Add Notification</string>

    <!-- Notifications -->
    <string name="line">Line: </string>
    <string name="arrivals">Arrivals: </string>
    <string name="avisame">Avísame: </string>
    <string name="times">1 min, 12 min</string>
    <string name="toggleButton"> </string>

    <!-- Action Bar Names -->
    <string name="search_fragment_name">Search</string>
    <string name="favourites_fragment_name">Favourites</string>
    <string name="map_fragment_name">Map</string>
    <string name="default_fragment_name">EMTnt</string>
</resources>
