<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="6dp">

    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/border_rectange_for_card_view"
        card_view:cardBackgroundColor="@color/white"
        card_view:cardCornerRadius="6dp"
        card_view:cardElevation="4dp"
        card_view:cardMaxElevation="4dp"
        card_view:cardPreventCornerOverlap="true"
        card_view:cardUseCompatPadding="true"
        card_view:contentPadding="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/favouriteBusStop_busStopName_textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:text="@string/favourite_busStop_default_name"
                android:textColor="@color/black"
                android:textSize="20sp"
                card_view:layout_constraintEnd_toStartOf="@+id/favouriteBusStop_busStopID_textView"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/favouriteBusStop_busStopID_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/favourite_busStop_default_id"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="16sp"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/lines"
                android:textColor="@color/blue"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toBottomOf="@+id/favouriteBusStop_busStopName_textView" />

            <TextView
                android:id="@+id/favouriteBusStop_busStopLines_textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="32dp"
                android:text="@string/favourite_busStop_default_lines"
                android:textColor="@color/blue"
                card_view:layout_constraintBaseline_toBaselineOf="@+id/textView8"
                card_view:layout_constraintEnd_toStartOf="@+id/imageView"
                card_view:layout_constraintStart_toEndOf="@+id/textView8" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/search_busStop_image_contentDescription"
                card_view:layout_constraintBottom_toBottomOf="parent"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintTop_toBottomOf="@+id/favouriteBusStop_busStopID_textView"
                card_view:srcCompat="@drawable/bus_stop" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/favourite_busStop_realName_hint"
                android:textSize="16sp"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toBottomOf="@+id/favouriteBusStop_busStopLines_textView" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/favourite_busStop_realName_default"
                card_view:layout_constraintBaseline_toBaselineOf="@+id/textView3"
                card_view:layout_constraintStart_toEndOf="@+id/textView3" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
